--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="container">
             <h2>Sei pronto a rivoluzionare la gestione delle scadenze?</h2>
             <p>Contattaci per una demo personalizzata e scopri come Expiry Manager può fare la differenza per il tuo business.</p>
-            <form action="https://formspree.io/f/xqadwnav" method="post">
+            <form action="https://formspree.io/f/mwpnazgd" method="post">
                 <input type="text" name="name" placeholder="Nome" required>
                 <input type="email" name="email" placeholder="Email" required>
                 <textarea name="message" placeholder="Messaggio..." rows="5" required></textarea>
