--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <h3>Meno sprechi, più guadagni.</h3>
                     <p>Non lasciare che i prodotti scaduti riducano i tuoi profitti. Il nostro sistema ti avvisa in tempo utile per agire.</p>
                 </div>
-                <img src="https://i.ibb.co/s933Xfmm/sprec-graf.png" alt="Grafico che mostra la riduzione degli sprechi">
+                <img src="https://i.ibb.co/fVPgBDpS/sprec-graf.png" alt="Grafico che mostra la riduzione degli sprechi">
             </div>
             <div class="benefit-item reverse">
                 <div class="benefit-content">
